Prefetch links, upgrade router module and bugfixes

--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
   "typings": "src/ts/types",
   "scripts": {
     "theme:download": "theme download --dir './theme'",
+    "theme:download:configs": "theme download --dir './theme' locales config/settings_data.json",
     "theme:download:locales": "theme download --dir './theme' locales",
-    "theme:download:config": "theme download --dir './theme' config",
+    "theme:download:config": "theme download --dir './theme' config/settings_data.json",
     "webpack": "webpack --env.production",
     "webpack:dev": "webpack --env.development",
     "deploy": "npm run build && theme deploy --dir ./theme",
     "deploy:webpack": "npm run build && theme deploy --dir ./theme assets/main.bundle.js assets/vendors.bundle.js assets/main.css",
-    "format:ts": "eslint ./src --ext .ts,.tsx --fix && tsc --noEmit",
-    "test": "npm run format:ts",
-    "build": "npm run format:ts && npm run webpack",
+    "lint": "eslint ./src --ext .ts,.tsx --fix && tsc --noEmit",
+    "test": "npm run lint",
+    "build": "npm run lint && npm run webpack",
     "manual:build:prod:sass": "node-sass --output-style compressed src/scss/main.scss -o theme/assets/ && postcss -c postcss.config.js theme/assets/main.css -o theme/assets/main.css",
-    "build:dev": "npm run format:ts && npm run webpack:dev",
+    "build:dev": "npm run lint && npm run webpack:dev",
     "zip": "gulp build:zip",
     "watch": "concurrently \"npm:watch:dev*\"",
     "watch:dev:theme": "theme watch --dir './theme'",
@@ -56,12 +57,13 @@
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-typescript": "^7.9.0",
+    "@babel/runtime": "^7.9.2",
     "@babel/runtime-corejs3": "^7.9.2",
     "@ribajs/eslint-config": "^1.8.0",
     "@ribajs/tsconfig": "^1.8.0",
     "@ribajs/webpack-config": "^0.0.1",
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
     "@yarnpkg/pnpify": "^2.0.0-rc.21",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
@@ -70,7 +72,7 @@
     "babelify": "^10.0.0",
     "browserify": "^16.5.1",
     "clean-css-cli": "^4.3.0",
-    "concurrently": "^5.1.0",
+    "concurrently": "^5.2.0",
     "core-js": "^3.6.5",
     "css-flip": "^0.5.0",
     "css-loader": "^3.5.3",
@@ -92,20 +94,20 @@
     "node-sass": "^4.14.0",
     "nodemon": "^2.0.3",
     "postcss": "^7.0.27",
-    "postcss-cli": "^7.1.0",
+    "postcss-cli": "^7.1.1",
     "postcss-loader": "^3.0.0",
     "postcss-modules": "^2.0.0",
     "prettier": "^2.0.5",
     "sass-loader": "^8.0.2",
-    "shelljs": "^0.8.3",
-    "style-loader": "^1.2.0",
-    "terser-webpack-plugin": "^2.3.5",
+    "shelljs": "^0.8.4",
+    "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^2.3.6",
     "tsify": "^4.0.1",
     "typescript": "^3.8.3",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1",
-    "webpack": "next",
+    "webpack": "^5.0.0-beta.15",
     "webpack-cli": "^3.3.11",
     "webpack-stream": "^5.2.1",
     "yargs": "^15.3.1"
@@ -119,8 +121,9 @@
     "@ribajs/router": "^1.8.0",
     "@ribajs/shopify": "^1.8.0",
     "@ribajs/shopify-tda": "^1.8.0",
+    "@ribajs/utils": "^1.8.0",
     "@types/debug": "^4.1.5",
-    "@types/jquery": "^3.3.35",
+    "@types/jquery": "^3.3.36",
     "@types/p-queue": "^3.2.1",
     "bootstrap": "^4.4.1",
     "debug": "^4.1.1",
@@ -128,22 +131,25 @@
     "popper.js": "^1.16.1"
   },
   "resolutions": {
-    "@ribajs/bs4": "portal:../riba/packages/bs4",
-    "@ribajs/core": "portal:../riba/packages/core",
-    "@ribajs/extras": "portal:../riba/packages/extras",
-    "@ribajs/i18n": "portal:../riba/packages/i18n",
-    "@ribajs/iconset": "portal:../riba/packages/iconset",
-    "@ribajs/jquery": "portal:../riba/packages/jquery",
-    "@ribajs/moment": "portal:../riba/packages/moment",
-    "@ribajs/pdf": "portal:../riba/packages/pdf",
-    "@ribajs/photoswipe": "portal:../riba/packages/photoswipe",
-    "@ribajs/router": "portal:../riba/packages/router",
-    "@ribajs/shopify": "portal:../riba/packages/shopify",
-    "@ribajs/shopify-easdk": "portal:../riba/packages/shopify-easdk",
-    "@ribajs/shopify-tda": "portal:../riba/packages/shopify-tda",
-    "@ribajs/eslint-config": "portal:../riba/infra/eslint-config",
-    "@ribajs/types": "portal:../riba/infra/types",
-    "@ribajs/webpack-config": "portal:../riba/infra/webpack-config",
-    "@ribajs/tsconfig": "portal:../riba/infra/tsconfig"
+    "@ribajs/bs4": "portal:/home/jumplink/Projekte/riba/packages/bs4",
+    "@ribajs/core": "portal:/home/jumplink/Projekte/riba/packages/core",
+    "@ribajs/extras": "portal:/home/jumplink/Projekte/riba/packages/extras",
+    "@ribajs/i18n": "portal:/home/jumplink/Projekte/riba/packages/i18n",
+    "@ribajs/iconset": "portal:/home/jumplink/Projekte/riba/packages/iconset",
+    "@ribajs/jquery": "portal:/home/jumplink/Projekte/riba/packages/jquery",
+    "@ribajs/moment": "portal:/home/jumplink/Projekte/riba/packages/moment",
+    "@ribajs/pdf": "portal:/home/jumplink/Projekte/riba/packages/pdf",
+    "@ribajs/photoswipe": "portal:/home/jumplink/Projekte/riba/packages/photoswipe",
+    "@ribajs/router": "portal:/home/jumplink/Projekte/riba/packages/router",
+    "@ribajs/shopify": "portal:/home/jumplink/Projekte/riba/packages/shopify",
+    "@ribajs/shopify-easdk": "portal:/home/jumplink/Projekte/riba/packages/shopify-easdk",
+    "@ribajs/shopify-tda": "portal:/home/jumplink/Projekte/riba/packages/shopify-tda",
+    "@ribajs/eslint-config": "portal:/home/jumplink/Projekte/riba/infra/eslint-config",
+    "@ribajs/types": "portal:/home/jumplink/Projekte/riba/infra/types",
+    "@ribajs/webpack-config": "portal:/home/jumplink/Projekte/riba/infra/webpack-config",
+    "@ribajs/tsconfig": "portal:/home/jumplink/Projekte/riba/infra/tsconfig",
+    "@ribajs/cache": "portal:/home/jumplink/Projekte/riba/packages/cache",
+    "@ribajs/history": "portal:/home/jumplink/Projekte/riba/packages/history",
+    "@ribajs/utils": "portal:/home/jumplink/Projekte/riba/packages/utils"
   }
 }
