--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "theme:download:configs": "theme download --dir './theme' locales config/settings_data.json",
     "theme:download:locales": "theme download --dir './theme' locales",
     "theme:download:config": "theme download --dir './theme' config/settings_data.json",
-    "webpack": "webpack --env.production",
-    "webpack:dev": "webpack --env.development",
+    "webpack": "webpack --env production",
+    "webpack:dev": "webpack --env development",
     "deploy": "npm run build && theme deploy --dir ./theme",
     "deploy:webpack": "npm run build && theme deploy --dir ./theme assets/main.bundle.js assets/vendors.bundle.js assets/main.css",
     "lint": "eslint ./src --ext .ts,.tsx --fix && tsc --noEmit",
@@ -33,123 +33,128 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.mediamor.de/jumplink.eu/fassbender-shopify-theme"
+    "url": "git@github.com:ArtCodeStudio/fassbender-shopify-theme.git"
   },
   "keywords": [
-    "JumpLink",
+    "Art+Code Studio",
     "Bootstrap4",
-    "Shopify"
+    "Shopify",
+    "myfassbender",
+    "Fassbender"
   ],
   "author": "Pascal Garber <pascal@jumplink.eu>",
   "license": "MIT",
   "bugs": {
-    "url": "https://git.mediamor.de/jumplink.eu/art-code-studio-shopify-theme/issues"
+    "url": "https://github.com/ArtCodeStudio/fassbender-shopify-theme/issues"
   },
   "homepage": "https://art-code-studio.myshopify.com",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-export-default-from": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/plugin-syntax-export-default-from": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-typescript": "^7.9.0",
-    "@babel/runtime": "^7.9.2",
-    "@babel/runtime-corejs3": "^7.9.2",
-    "@ribajs/eslint-config": "^1.8.0",
-    "@ribajs/tsconfig": "^1.8.0",
-    "@ribajs/webpack-config": "^0.0.1",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
-    "@yarnpkg/pnpify": "^2.0.0-rc.21",
-    "autoprefixer": "^9.7.6",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-export-default-from": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
+    "@babel/plugin-syntax-export-default-from": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@babel/runtime": "^7.12.1",
+    "@babel/runtime-corejs3": "^7.12.1",
+    "@ribajs/eslint-config": "^1.9.0-beta.2",
+    "@ribajs/tsconfig": "^1.9.0-beta.2",
+    "@ribajs/webpack-config": "^1.9.0-beta.2",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
+    "@yarnpkg/pnpify": "^2.3.3",
+    "autoprefixer": "^10.0.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-array-includes": "^2.0.3",
     "babel-plugin-transform-es2015-parameters": "^6.24.1",
     "babelify": "^10.0.0",
-    "browserify": "^16.5.1",
+    "browserify": "^17.0.0",
     "clean-css-cli": "^4.3.0",
-    "concurrently": "^5.2.0",
+    "concurrently": "^5.3.0",
     "core-js": "^3.6.5",
     "css-flip": "^0.5.0",
-    "css-loader": "^3.5.3",
+    "css-loader": "^5.0.0",
     "csso-cli": "^3.0.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "extract-loader": "^5.0.1",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "extract-loader": "^5.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.1.1",
     "gulp": "^4.0.2",
     "gulp-jsoncombine": "^1.0.4",
     "gulp-util": "^3.0.8",
-    "gulp-zip": "^5.0.1",
-    "html-loader": "^1.1.0",
-    "inspectpack": "^4.4.0",
-    "jshint": "^2.11.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.0",
-    "nodemon": "^2.0.3",
-    "postcss": "^7.0.27",
-    "postcss-cli": "^7.1.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-modules": "^2.0.0",
-    "prettier": "^2.0.5",
-    "sass-loader": "^8.0.2",
+    "gulp-zip": "^5.0.2",
+    "html-loader": "^1.3.2",
+    "inspectpack": "^4.5.2",
+    "jshint": "^2.12.0",
+    "mini-css-extract-plugin": "^1.1.1",
+    "node-sass": "^4.14.1",
+    "nodemon": "^2.0.6",
+    "postcss": "^8.1.2",
+    "postcss-cli": "^8.1.0",
+    "postcss-loader": "^4.0.4",
+    "postcss-modules": "^3.2.2",
+    "prettier": "^2.1.2",
+    "sass-loader": "^10.0.3",
     "shelljs": "^0.8.4",
-    "style-loader": "^1.2.1",
-    "terser-webpack-plugin": "^2.3.6",
-    "tsify": "^4.0.1",
-    "typescript": "^3.8.3",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.0.0",
+    "tsify": "^5.0.2",
+    "typescript": "^4.0.3",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1",
-    "webpack": "^5.0.0-beta.15",
-    "webpack-cli": "^3.3.11",
-    "webpack-stream": "^5.2.1",
-    "yargs": "^15.3.1"
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.1.0",
+    "webpack-stream": "^6.1.0",
+    "yargs": "^16.1.0"
   },
   "dependencies": {
-    "@ribajs/bs4": "^1.8.0",
-    "@ribajs/core": "^1.8.0",
-    "@ribajs/extras": "^1.8.0",
-    "@ribajs/i18n": "^1.8.0",
-    "@ribajs/jquery": "^1.8.0",
-    "@ribajs/router": "^1.8.0",
-    "@ribajs/shopify": "^1.8.0",
-    "@ribajs/shopify-tda": "^1.8.0",
-    "@ribajs/utils": "^1.8.0",
+    "@ribajs/bs4": "^1.9.0-beta.2",
+    "@ribajs/core": "^1.9.0-beta.2",
+    "@ribajs/extras": "^1.9.0-beta.2",
+    "@ribajs/i18n": "^1.9.0-beta.2",
+    "@ribajs/jquery": "^1.9.0-beta.2",
+    "@ribajs/router": "^1.9.0-beta.2",
+    "@ribajs/shopify": "^1.9.0-beta.2",
+    "@ribajs/shopify-tda": "^1.9.0-beta.2",
+    "@ribajs/utils": "^1.9.0-beta.2",
     "@types/debug": "^4.1.5",
-    "@types/jquery": "^3.3.36",
+    "@types/jquery": "^3.5.3",
     "@types/p-queue": "^3.2.1",
-    "bootstrap": "^4.4.1",
-    "debug": "^4.1.1",
-    "p-queue": "^6.3.0",
+    "bootstrap": "^4.5.3",
+    "debug": "^4.3.0",
+    "p-queue": "^6.6.2",
     "popper.js": "^1.16.1"
   },
   "resolutions": {
-    "@ribajs/bs4": "portal:/home/jumplink/Projekte/riba/packages/bs4",
-    "@ribajs/core": "portal:/home/jumplink/Projekte/riba/packages/core",
-    "@ribajs/extras": "portal:/home/jumplink/Projekte/riba/packages/extras",
-    "@ribajs/i18n": "portal:/home/jumplink/Projekte/riba/packages/i18n",
-    "@ribajs/iconset": "portal:/home/jumplink/Projekte/riba/packages/iconset",
-    "@ribajs/jquery": "portal:/home/jumplink/Projekte/riba/packages/jquery",
-    "@ribajs/moment": "portal:/home/jumplink/Projekte/riba/packages/moment",
-    "@ribajs/pdf": "portal:/home/jumplink/Projekte/riba/packages/pdf",
-    "@ribajs/photoswipe": "portal:/home/jumplink/Projekte/riba/packages/photoswipe",
-    "@ribajs/router": "portal:/home/jumplink/Projekte/riba/packages/router",
-    "@ribajs/shopify": "portal:/home/jumplink/Projekte/riba/packages/shopify",
-    "@ribajs/shopify-easdk": "portal:/home/jumplink/Projekte/riba/packages/shopify-easdk",
-    "@ribajs/shopify-tda": "portal:/home/jumplink/Projekte/riba/packages/shopify-tda",
-    "@ribajs/eslint-config": "portal:/home/jumplink/Projekte/riba/infra/eslint-config",
-    "@ribajs/types": "portal:/home/jumplink/Projekte/riba/infra/types",
-    "@ribajs/webpack-config": "portal:/home/jumplink/Projekte/riba/infra/webpack-config",
-    "@ribajs/tsconfig": "portal:/home/jumplink/Projekte/riba/infra/tsconfig",
-    "@ribajs/cache": "portal:/home/jumplink/Projekte/riba/packages/cache",
-    "@ribajs/history": "portal:/home/jumplink/Projekte/riba/packages/history",
-    "@ribajs/utils": "portal:/home/jumplink/Projekte/riba/packages/utils"
+    "@ribajs/bs4": "portal:../riba/packages/bs4",
+    "@ribajs/core": "portal:../riba/packages/core",
+    "@ribajs/extras": "portal:../riba/packages/extras",
+    "@ribajs/i18n": "portal:../riba/packages/i18n",
+    "@ribajs/iconset": "portal:../riba/packages/iconset",
+    "@ribajs/jquery": "portal:../riba/packages/jquery",
+    "@ribajs/moment": "portal:../riba/packages/moment",
+    "@ribajs/pdf": "portal:../riba/packages/pdf",
+    "@ribajs/photoswipe": "portal:../riba/packages/photoswipe",
+    "@ribajs/router": "portal:../riba/packages/router",
+    "@ribajs/shopify": "portal:../riba/packages/shopify",
+    "@ribajs/shopify-easdk": "portal:../riba/packages/shopify-easdk",
+    "@ribajs/shopify-tda": "portal:../riba/packages/shopify-tda",
+    "@ribajs/eslint-config": "portal:../riba/infra/eslint-config",
+    "@ribajs/types": "portal:../riba/infra/types",
+    "@ribajs/webpack-config": "portal:../riba/infra/webpack-config",
+    "@ribajs/tsconfig": "portal:../riba/infra/tsconfig",
+    "@ribajs/cache": "portal:../riba/packages/cache",
+    "@ribajs/history": "portal:../riba/packages/history",
+    "@ribajs/utils": "portal:../riba/packages/utils",
+    "@ribajs/content-slider": "portal:../riba/packages/content-slider",
+    "@ribajs/leaflet-map": "portal:../riba/packages/leaflet-map",
+    "@ribajs/octobercms": "portal:../riba/packages/octobercms"
   }
 }
