--- a/theme/config/settings_data.json
+++ b/theme/config/settings_data.json
@@ -9,6 +9,12 @@
     "theTradeDesk_adv": "1fqgs22",
     "theTradeDesk_tagId_1": "hqe0lr3",
     "theTradeDesk_baseSrc": "https:\/\/insight.adsrvr.org\/track\/up",
+    "prefetch_linklist_1": "toggle-menu",
+    "prefetch_linklist_1_sublinks": true,
+    "prefetch_linklist_2": "toggle-menu-more",
+    "prefetch_linklist_2_sublinks": true,
+    "prefetch_next_prev_product": true,
+    "prefetch_color_variants": true,
     "checkout_header_image": "",
     "checkout_logo_image": "shopify:\/\/shop_images\/iconset-logo.png",
     "checkout_logo_position": "left",
@@ -66,69 +72,10 @@
           "position_xl": "previous-xl"
         }
       },
-      "1550327279919": {
-        "type": "one-storie",
-        "disabled": true,
-        "blocks": {
-          "1569938250258": {
-            "type": "image",
-            "settings": {
-              "image": "shopify:\/\/shop_images\/361a3398_xs_65qual.jpeg",
-              "aspect_ratio": "10by17",
-              "aspect_ratio_md": "3by4",
-              "video_url": "",
-              "mp4_video_url": "",
-              "controls": false,
-              "mute": true,
-              "video_poster": "",
-              "spacing": 0
-            }
-          }
-        },
-        "block_order": [
-          "1569938250258"
-        ],
-        "settings": {
-          "story": "shopify:\/\/products\/vest-dress-1",
-          "title": "Vest Dress red Anton",
-          "show_title": false,
-          "color": "#ffffff",
-          "title_spacing": 10
-        }
-      },
       "outdated-browser": {
         "type": "outdated-browser",
         "settings": {
           "enable": true
-        }
-      },
-      "1569936572878": {
-        "type": "one-storie",
-        "blocks": {
-          "1586618232284": {
-            "type": "image",
-            "settings": {
-              "image": "shopify:\/\/shop_images\/361a3243_xs_65qual.jpeg",
-              "aspect_ratio": "3by2",
-              "aspect_ratio_md": "none",
-              "video_url": "",
-              "mp4_video_url": "",
-              "controls": false,
-              "mute": true,
-              "video_poster": "",
-              "spacing": 0
-            }
-          }
-        },
-        "block_order": [
-          "1586618232284"
-        ],
-        "settings": {
-          "story": "shopify:\/\/products\/silk-dress-red-print",
-          "title": "Silk Dress Red",
-          "show_title": false,
-          "color": "#ffffff",
-          "title_spacing": 0
         }
       },
       "lookbook-01": {
@@ -305,152 +252,86 @@
           "title": "FW19\/20"
         }
       },
-      "1574804032139": {
+      "1589633002724": {
         "type": "one-storie",
-        "disabled": true,
         "blocks": {
-          "1574804043097": {
+          "2f3ab92b-96fa-4670-85df-cdd83d4d6f65": {
             "type": "image",
             "settings": {
-              "image": "shopify:\/\/shop_images\/Popup_HH.Hege.png",
-              "aspect_ratio": "9by14",
-              "aspect_ratio_md": "16by9",
+              "image": "shopify:\/\/shop_images\/Fassbender_22_klein.jpg",
+              "aspect_ratio": "1by1",
+              "aspect_ratio_md": "3by2",
               "video_url": "",
-              "mp4_video_url": "",
               "controls": false,
               "mute": true,
-              "video_poster": "",
+              "spacing": 0
+            }
+          },
+          "77d210ba-0253-44ab-a4ec-8118cc053d36": {
+            "type": "image",
+            "settings": {
+              "image": "shopify:\/\/shop_images\/Fassbender_03_klein.jpg",
+              "aspect_ratio": "2by3",
+              "aspect_ratio_md": "none",
+              "video_url": "",
+              "controls": false,
+              "mute": true,
               "spacing": 0
             }
           }
         },
         "block_order": [
-          "1574804043097"
+          "2f3ab92b-96fa-4670-85df-cdd83d4d6f65",
+          "77d210ba-0253-44ab-a4ec-8118cc053d36"
         ],
         "settings": {
-          "story": "shopify:\/\/collections\/all",
-          "title": "SHOP NOW",
+          "story": "shopify:\/\/collections\/new-collection",
+          "title": "Vest Dress",
           "show_title": false,
           "color": "#ffffff",
           "title_spacing": 0
         }
       },
-      "1586687831585": {
-        "type": "one-storie",
-        "blocks": {
-          "1586687856181": {
-            "type": "image",
-            "settings": {
-              "image": "shopify:\/\/shop_images\/361a2607__xs_75qual.jpg",
-              "aspect_ratio": "3by2",
-              "aspect_ratio_md": "none",
-              "video_url": "",
-              "mp4_video_url": "",
-              "controls": false,
-              "mute": true,
-              "video_poster": "",
-              "spacing": 0
-            }
-          }
-        },
-        "block_order": [
-          "1586687856181"
-        ],
-        "settings": {
-          "story": "shopify:\/\/collections\/ss-2020",
-          "title": "Spring Summer 2020",
-          "show_title": false,
-          "color": "#d9998f",
-          "title_spacing": 7
-        }
-      },
-      "1586688264965": {
-        "type": "one-storie",
-        "disabled": true,
-        "blocks": {
-          "1586688273878": {
-            "type": "image",
-            "settings": {
-              "image": "shopify:\/\/shop_images\/361a3357__xs_75qual.jpeg",
-              "aspect_ratio": "3by2",
-              "aspect_ratio_md": "none",
-              "video_url": "",
-              "mp4_video_url": "",
-              "controls": false,
-              "mute": true,
-              "video_poster": "",
-              "spacing": 0
-            }
-          }
-        },
-        "block_order": [
-          "1586688273878"
-        ],
-        "settings": {
-          "story": "shopify:\/\/collections\/all",
-          "title": "Silk Dress Headshot",
-          "show_title": false,
-          "color": "#ffffff",
-          "title_spacing": 0
-        }
-      },
-      "1586688927448": {
-        "type": "product-scrollbar",
-        "settings": {
-          "collection": "dress",
-          "title": ""
-        }
-      },
-      "1586688985887": {
+      "1590140011265": {
         "type": "newsletter",
-        "disabled": true,
         "settings": {
-          "name": "",
+          "name": "Newsletter",
           "enable": true,
-          "color": "#f9dfd2",
-          "subscrib_url": ""
+          "color": "#ffffff"
         }
       },
-      "1587240625973": {
+      "16018407732f1d6ed6": {
         "type": "one-storie",
-        "disabled": true,
         "blocks": {
-          "1587240643574": {
+          "34053ec3-ff69-441d-a1a9-8190e3cf20bb": {
             "type": "image",
             "settings": {
-              "image": "shopify:\/\/shop_images\/57C9D24A-C7DD-4519-BD8A-B4BC365634B5.png",
-              "aspect_ratio": "1by2",
-              "aspect_ratio_md": "none",
+              "image": "shopify:\/\/shop_images\/Fassbender_06_klein.jpg",
+              "aspect_ratio": "1by1",
+              "aspect_ratio_md": "3by2",
               "video_url": "",
-              "mp4_video_url": "",
               "controls": false,
               "mute": true,
-              "video_poster": "",
               "spacing": 0
             }
           }
         },
         "block_order": [
-          "1587240643574"
+          "34053ec3-ff69-441d-a1a9-8190e3cf20bb"
         ],
         "settings": {
-          "story": "shopify:\/\/collections\/winter-sale",
-          "title": "Winter Sale",
+          "story": "shopify:\/\/collections\/new-collection",
+          "title": "FW 20 Collection",
           "show_title": false,
           "color": "#ffffff",
-          "title_spacing": 7
+          "title_spacing": 30
         }
       }
     },
     "content_for_index": [
-      "1586687831585",
-      "1587240625973",
-      "1550327279919",
-      "1586688927448",
-      "1569936572878",
-      "1586688264965",
-      "1586688985887",
-      "1574804032139"
+      "16018407732f1d6ed6",
+      "1589633002724",
+      "1590140011265"
     ]
   }
 }
