Upgrade Riba to current version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fassbender-shopify-theme",
-  "version": "2.7.2",
+  "version": "2.7.4",
   "description": "Shopify theme based on Bootstrap 4",
   "main": "src/ts/main.ts",
   "typings": "src/ts/types",
@@ -28,7 +28,6 @@
     "checkout": "concurrently -k \"npm:checkout:*\"",
     "checkout:js": "uglifyjs checkout/custom-checkout.js -o checkout/custom-checkout.min.js -c -m;",
     "checkout:css": "cleancss checkout/custom-checkout.css -o checkout/custom-checkout.min.css",
-    "packages:npm:link": "npm link @ribajs/core @ribajs/i18n @ribajs/extras @ribajs/jquery @ribajs/bs4 @ribajs/shopify @ribajs/router @ribajs/shopify-tda",
     "packages:upgrade": "yarn upgrade-interactive"
   },
   "repository": {
@@ -49,39 +48,39 @@
   },
   "homepage": "https://art-code-studio.myshopify.com",
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-export-default-from": "^7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
-    "@babel/plugin-syntax-export-default-from": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-typescript": "^7.12.1",
-    "@babel/runtime": "^7.12.1",
-    "@babel/runtime-corejs3": "^7.12.1",
-    "@ribajs/eslint-config": "^1.9.0-beta.2",
-    "@ribajs/tsconfig": "^1.9.0-beta.2",
-    "@ribajs/webpack-config": "^1.9.0-beta.2",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "@yarnpkg/pnpify": "^2.3.3",
-    "autoprefixer": "^10.0.1",
+    "@babel/cli": "^7.15.4",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-export-default-from": "^7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/plugin-syntax-export-default-from": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-typescript": "^7.15.0",
+    "@babel/runtime": "^7.15.4",
+    "@babel/runtime-corejs3": "^7.15.4",
+    "@ribajs/eslint-config": "workspace:*",
+    "@ribajs/tsconfig": "workspace:*",
+    "@ribajs/webpack-config": "workspace:*",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "@yarnpkg/pnpify": "^3.0.1-rc.2",
+    "autoprefixer": "^10.3.4",
     "babel-loader": "^8.1.0",
     "babel-plugin-array-includes": "^2.0.3",
     "babel-plugin-transform-es2015-parameters": "^6.24.1",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
     "clean-css-cli": "^4.3.0",
-    "concurrently": "^5.3.0",
-    "core-js": "^3.6.5",
+    "concurrently": "^6.2.1",
+    "core-js": "^3.17.2",
     "css-flip": "^0.5.0",
-    "css-loader": "^5.0.0",
+    "css-loader": "^6.2.0",
     "csso-cli": "^3.0.0",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.13.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "extract-loader": "^5.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.1.1",
@@ -89,72 +88,81 @@
     "gulp-jsoncombine": "^1.0.4",
     "gulp-util": "^3.0.8",
     "gulp-zip": "^5.0.2",
-    "html-loader": "^1.3.2",
+    "html-loader": "^2.1.2",
     "inspectpack": "^4.5.2",
     "jshint": "^2.12.0",
-    "mini-css-extract-plugin": "^1.1.1",
-    "node-sass": "^4.14.1",
+    "mini-css-extract-plugin": "^2.2.2",
+    "node-sass": "^6.0.1",
     "nodemon": "^2.0.6",
-    "postcss": "^8.1.2",
-    "postcss-cli": "^8.1.0",
-    "postcss-loader": "^4.0.4",
+    "postcss": "^8.3.6",
+    "postcss-cli": "^8.3.1",
+    "postcss-loader": "^6.1.1",
     "postcss-modules": "^3.2.2",
-    "prettier": "^2.1.2",
-    "sass-loader": "^10.0.3",
+    "prettier": "^2.3.2",
+    "sass-loader": "^12.1.0",
     "shelljs": "^0.8.4",
-    "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^5.0.0",
+    "style-loader": "^3.2.1",
+    "terser-webpack-plugin": "^5.2.3",
     "tsify": "^5.0.2",
-    "typescript": "^4.0.3",
+    "typescript": "^4.4.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1",
-    "webpack": "^5.1.3",
-    "webpack-cli": "^4.1.0",
-    "webpack-stream": "^6.1.0",
-    "yargs": "^16.1.0"
+    "webpack": "^5.52.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-stream": "^7.0.0",
+    "yargs": "^17.1.1"
   },
   "dependencies": {
-    "@ribajs/bs4": "^1.9.0-beta.2",
-    "@ribajs/core": "^1.9.0-beta.2",
-    "@ribajs/extras": "^1.9.0-beta.2",
-    "@ribajs/i18n": "^1.9.0-beta.2",
-    "@ribajs/jquery": "^1.9.0-beta.2",
-    "@ribajs/router": "^1.9.0-beta.2",
-    "@ribajs/shopify": "^1.9.0-beta.2",
-    "@ribajs/shopify-tda": "^1.9.0-beta.2",
-    "@ribajs/utils": "^1.9.0-beta.2",
+    "@ribajs/bs4": "workspace:*",
+    "@ribajs/core": "workspace:*",
+    "@ribajs/extras": "workspace:*",
+    "@ribajs/i18n": "workspace:*",
+    "@ribajs/jquery": "workspace:*",
+    "@ribajs/router": "workspace:*",
+    "@ribajs/shopify": "workspace:*",
+    "@ribajs/shopify-tda": "workspace:*",
+    "@ribajs/utils": "workspace:*",
     "@types/debug": "^4.1.5",
-    "@types/jquery": "^3.5.3",
+    "@types/jquery": "^3.5.6",
     "@types/p-queue": "^3.2.1",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "debug": "^4.3.0",
     "p-queue": "^6.6.2",
     "popper.js": "^1.16.1"
   },
+  "workspaces": [
+    "packages/riba/packages/*",
+    "packages/riba/backend/*",
+    "packages/riba/infra/*",
+    "!packages/riba/infra/cli",
+    "!packages/riba/infra/doc",
+    "!packages/riba/infra/schematics"
+  ],
   "resolutions": {
-    "@ribajs/bs4": "portal:../riba/packages/bs4",
-    "@ribajs/core": "portal:../riba/packages/core",
-    "@ribajs/extras": "portal:../riba/packages/extras",
-    "@ribajs/i18n": "portal:../riba/packages/i18n",
-    "@ribajs/iconset": "portal:../riba/packages/iconset",
-    "@ribajs/jquery": "portal:../riba/packages/jquery",
-    "@ribajs/moment": "portal:../riba/packages/moment",
-    "@ribajs/pdf": "portal:../riba/packages/pdf",
-    "@ribajs/photoswipe": "portal:../riba/packages/photoswipe",
-    "@ribajs/router": "portal:../riba/packages/router",
-    "@ribajs/shopify": "portal:../riba/packages/shopify",
-    "@ribajs/shopify-easdk": "portal:../riba/packages/shopify-easdk",
-    "@ribajs/shopify-tda": "portal:../riba/packages/shopify-tda",
-    "@ribajs/eslint-config": "portal:../riba/infra/eslint-config",
-    "@ribajs/types": "portal:../riba/infra/types",
-    "@ribajs/webpack-config": "portal:../riba/infra/webpack-config",
-    "@ribajs/tsconfig": "portal:../riba/infra/tsconfig",
-    "@ribajs/cache": "portal:../riba/packages/cache",
-    "@ribajs/history": "portal:../riba/packages/history",
-    "@ribajs/utils": "portal:../riba/packages/utils",
-    "@ribajs/content-slider": "portal:../riba/packages/content-slider",
-    "@ribajs/leaflet-map": "portal:../riba/packages/leaflet-map",
-    "@ribajs/octobercms": "portal:../riba/packages/octobercms"
-  }
+    "@ribajs/bs4": "workspace:*",
+    "@ribajs/core": "workspace:*",
+    "@ribajs/extras": "workspace:*",
+    "@ribajs/i18n": "workspace:*",
+    "@ribajs/iconset": "workspace:*",
+    "@ribajs/jquery": "workspace:*",
+    "@ribajs/moment": "workspace:*",
+    "@ribajs/pdf": "workspace:*",
+    "@ribajs/photoswipe": "workspace:*",
+    "@ribajs/router": "workspace:*",
+    "@ribajs/shopify": "workspace:*",
+    "@ribajs/shopify-easdk": "workspace:*",
+    "@ribajs/shopify-tda": "workspace:*",
+    "@ribajs/eslint-config": "workspace:*",
+    "@ribajs/types": "workspace:*",
+    "@ribajs/webpack-config": "workspace:*",
+    "@ribajs/tsconfig": "workspace:*",
+    "@ribajs/cache": "workspace:*",
+    "@ribajs/history": "workspace:*",
+    "@ribajs/utils": "workspace:*",
+    "@ribajs/content-slider": "workspace:*",
+    "@ribajs/leaflet-map": "workspace:*",
+    "@ribajs/octobercms": "workspace:*"
+  },
+  "packageManager": "yarn@3.0.2"
 }
