--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "src/ts/main.ts"
   ],
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "theme/assets",
     "typeRoots": ["./node_modules/@types", "./src/ts/types"]
   }
 }
