--- a/package.json
+++ b/package.json
@@ -116,7 +116,9 @@
   "dependencies": {
     "@ribajs/bs4": "workspace:*",
     "@ribajs/core": "workspace:*",
+    "@ribajs/events": "workspace:packages/riba/packages/events",
     "@ribajs/extras": "workspace:*",
+    "@ribajs/history": "workspace:packages/riba/packages/history",
     "@ribajs/i18n": "workspace:*",
     "@ribajs/jquery": "workspace:*",
     "@ribajs/router": "workspace:*",
