--- a/package.json
+++ b/package.json
@@ -92,7 +92,6 @@
     "inspectpack": "^4.5.2",
     "jshint": "^2.12.0",
     "mini-css-extract-plugin": "^2.2.2",
-    "node-sass": "^6.0.1",
     "nodemon": "^2.0.6",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
@@ -131,7 +130,8 @@
     "bootstrap": "^4.6.0",
     "debug": "^4.3.0",
     "p-queue": "^6.6.2",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "sass": "^1.39.0"
   },
   "workspaces": [
     "packages/riba/packages/*",
