--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "fassbender-shopify-theme",
-  "version": "2.7.5",
+  "version": "2.7.6",
   "description": "Shopify theme based on Bootstrap 4",
   "main": "src/ts/main.ts",
   "typings": "src/ts/types",
   "scripts": {
     "theme:download": "theme download --dir './theme'",
-    "theme:download:configs": "theme download --dir './theme' locales config/settings_data.json",
+    "theme:download:configs": "theme download --dir './theme' locales config",
     "theme:download:locales": "theme download --dir './theme' locales",
-    "theme:download:config": "theme download --dir './theme' config/settings_data.json",
+    "theme:download:config": "theme download --dir './theme' config",
     "webpack": "webpack --env production",
     "webpack:dev": "webpack --env development",
     "deploy": "npm run build && theme deploy --dir ./theme",
