--- a/package.json
+++ b/package.json
@@ -48,123 +48,91 @@
   },
   "homepage": "https://art-code-studio.myshopify.com",
   "devDependencies": {
-    "@babel/cli": "^7.15.4",
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-proposal-export-default-from": "^7.14.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
-    "@babel/plugin-syntax-export-default-from": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.4",
-    "@babel/preset-typescript": "^7.15.0",
-    "@babel/runtime": "^7.15.4",
-    "@babel/runtime-corejs3": "^7.15.4",
-    "@ribajs/eslint-config": "workspace:*",
-    "@ribajs/tsconfig": "workspace:*",
-    "@ribajs/webpack-config": "workspace:*",
-    "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "@typescript-eslint/parser": "^4.30.0",
-    "@yarnpkg/pnpify": "^3.0.1-rc.2",
-    "autoprefixer": "^10.3.4",
-    "babel-loader": "^8.1.0",
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-export-default-from": "^7.23.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/plugin-syntax-export-default-from": "^7.23.3",
+    "@babel/plugin-transform-runtime": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-typescript": "^7.23.3",
+    "@babel/runtime": "^7.23.9",
+    "@babel/runtime-corejs3": "^7.23.9",
+    "@ribajs/eslint-config": "^2.0.0-rc.10",
+    "@ribajs/tsconfig": "^2.0.0-rc.10",
+    "@ribajs/webpack-config": "^2.0.0-rc.10",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "@yarnpkg/pnpify": "^4.0.1",
+    "autoprefixer": "^10.4.17",
+    "babel-loader": "^9.1.3",
     "babel-plugin-array-includes": "^2.0.3",
     "babel-plugin-transform-es2015-parameters": "^6.24.1",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
-    "clean-css-cli": "^4.3.0",
-    "concurrently": "^6.2.1",
-    "core-js": "^3.17.2",
+    "clean-css-cli": "^5.6.3",
+    "concurrently": "^8.2.2",
+    "core-js": "^3.35.1",
     "css-flip": "^0.5.0",
-    "css-loader": "^6.2.0",
-    "csso-cli": "^3.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "css-loader": "^6.9.1",
+    "csso-cli": "^4.0.2",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "extract-loader": "^5.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^6.1.1",
+    "file-loader": "^6.2.0",
     "gulp": "^4.0.2",
     "gulp-jsoncombine": "^1.0.4",
     "gulp-util": "^3.0.8",
-    "gulp-zip": "^5.0.2",
-    "html-loader": "^2.1.2",
-    "inspectpack": "^4.5.2",
-    "jshint": "^2.12.0",
-    "mini-css-extract-plugin": "^2.2.2",
-    "nodemon": "^2.0.6",
-    "postcss": "^8.3.6",
-    "postcss-cli": "^8.3.1",
-    "postcss-loader": "^6.1.1",
-    "postcss-modules": "^3.2.2",
-    "prettier": "^2.3.2",
-    "sass-loader": "^12.1.0",
-    "shelljs": "^0.8.4",
-    "style-loader": "^3.2.1",
-    "terser-webpack-plugin": "^5.2.3",
-    "tsify": "^5.0.2",
-    "typescript": "^4.4.2",
+    "gulp-zip": "^6.0.0",
+    "html-loader": "^5.0.0",
+    "inspectpack": "^4.7.1",
+    "jshint": "^2.13.6",
+    "mini-css-extract-plugin": "^2.7.7",
+    "nodemon": "^3.0.3",
+    "postcss": "^8.4.33",
+    "postcss-cli": "^11.0.0",
+    "postcss-loader": "^8.0.0",
+    "postcss-modules": "^6.0.0",
+    "prettier": "^3.2.4",
+    "sass-loader": "^14.0.0",
+    "shelljs": "^0.8.5",
+    "style-loader": "^3.3.4",
+    "terser-webpack-plugin": "^5.3.10",
+    "tsify": "^5.0.4",
+    "typescript": "^5.3.3",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.1",
-    "webpack": "^5.52.0",
-    "webpack-cli": "^4.8.0",
+    "watchify": "^4.0.0",
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4",
     "webpack-stream": "^7.0.0",
-    "yargs": "^17.1.1"
+    "yargs": "^17.7.2"
   },
   "dependencies": {
-    "@ribajs/bs4": "workspace:*",
-    "@ribajs/core": "workspace:*",
-    "@ribajs/events": "workspace:*",
-    "@ribajs/extras": "workspace:*",
-    "@ribajs/history": "workspace:*",
-    "@ribajs/i18n": "workspace:*",
-    "@ribajs/jquery": "workspace:*",
-    "@ribajs/router": "workspace:*",
-    "@ribajs/shopify": "workspace:*",
-    "@ribajs/shopify-tda": "workspace:*",
-    "@ribajs/utils": "workspace:*",
-    "@types/debug": "^4.1.5",
-    "@types/jquery": "^3.5.6",
+    "@ribajs/bs4": "^2.0.0-rc.10",
+    "@ribajs/core": "^2.0.0-rc.10",
+    "@ribajs/events": "^2.0.0-rc.10",
+    "@ribajs/extras": "^2.0.0-rc.10",
+    "@ribajs/history": "^2.0.0-rc.10",
+    "@ribajs/i18n": "^2.0.0-rc.10",
+    "@ribajs/jquery": "^2.0.0-rc.10",
+    "@ribajs/router": "^2.0.0-rc.10",
+    "@ribajs/shopify": "^2.0.0-rc.10",
+    "@ribajs/shopify-tda": "^2.0.0-rc.10",
+    "@ribajs/types": "^2.0.0-rc.10",
+    "@ribajs/utils": "^2.0.0-rc.10",
+    "@types/debug": "^4.1.12",
+    "@types/jquery": "^3.5.29",
     "@types/p-queue": "^3.2.1",
-    "bootstrap": "^4.6.0",
-    "debug": "^4.3.0",
-    "p-queue": "^6.6.2",
+    "bootstrap": "^5.3.2",
+    "debug": "^4.3.4",
+    "p-queue": "^8.0.1",
     "popper.js": "^1.16.1",
-    "sass": "^1.39.0"
+    "sass": "^1.70.0"
   },
-  "workspaces": [
-    "packages/riba/packages/*",
-    "packages/riba/backend/*",
-    "packages/riba/infra/*",
-    "!packages/riba/infra/cli",
-    "!packages/riba/infra/doc",
-    "!packages/riba/infra/schematics"
-  ],
-  "resolutions": {
-    "@ribajs/bs4": "workspace:*",
-    "@ribajs/core": "workspace:*",
-    "@ribajs/extras": "workspace:*",
-    "@ribajs/i18n": "workspace:*",
-    "@ribajs/iconset": "workspace:*",
-    "@ribajs/jquery": "workspace:*",
-    "@ribajs/moment": "workspace:*",
-    "@ribajs/pdf": "workspace:*",
-    "@ribajs/photoswipe": "workspace:*",
-    "@ribajs/router": "workspace:*",
-    "@ribajs/shopify": "workspace:*",
-    "@ribajs/shopify-easdk": "workspace:*",
-    "@ribajs/shopify-tda": "workspace:*",
-    "@ribajs/eslint-config": "workspace:*",
-    "@ribajs/types": "workspace:*",
-    "@ribajs/webpack-config": "workspace:*",
-    "@ribajs/tsconfig": "workspace:*",
-    "@ribajs/cache": "workspace:*",
-    "@ribajs/history": "workspace:*",
-    "@ribajs/utils": "workspace:*",
-    "@ribajs/content-slider": "workspace:*",
-    "@ribajs/leaflet-map": "workspace:*",
-    "@ribajs/octobercms": "workspace:*"
-  },
-  "packageManager": "yarn@3.0.2"
+  "packageManager": "yarn@4.0.2"
 }
