--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
     "@types/debug": "^4.1.12",
     "@types/jquery": "^3.5.29",
     "@types/p-queue": "^3.2.1",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^4.x",
     "debug": "^4.3.4",
     "p-queue": "^8.0.1",
     "popper.js": "^1.16.1",
