chore: Replaced webpack with vite

--- a/package.json
+++ b/package.json
@@ -5,30 +5,13 @@
   "main": "src/ts/main.ts",
   "typings": "src/ts/types",
   "scripts": {
-    "theme:download": "theme download --dir './theme'",
-    "theme:download:configs": "theme download --dir './theme' locales config",
-    "theme:download:locales": "theme download --dir './theme' locales",
-    "theme:download:config": "theme download --dir './theme' config",
-    "webpack": "webpack --env production",
-    "webpack:dev": "webpack --env development",
-    "deploy": "npm run build && theme deploy --dir ./theme",
-    "deploy:webpack": "npm run build && theme deploy --dir ./theme assets/main.bundle.js assets/vendors.bundle.js assets/main.css",
     "lint": "eslint ./src --ext .ts,.tsx --fix && tsc --noEmit",
-    "test": "npm run lint",
-    "build": "npm run lint && npm run webpack",
-    "manual:build:prod:sass": "node-sass --output-style compressed src/scss/main.scss -o theme/assets/ && postcss -c postcss.config.js theme/assets/main.css -o theme/assets/main.css",
-    "build:dev": "npm run lint && npm run webpack:dev",
-    "zip": "gulp build:zip",
+    "test": "yarn lint",
+    "clear": "rimraf ./theme/assets/*.js ./theme/assets/*.css ./theme/assets/*.tsbuildinfo",
+    "build": "yarn lint && yarn build:vite",
+    "build:vite": "vite build",
     "watch": "concurrently \"npm:watch:dev*\"",
-    "watch:dev:theme": "theme watch --dir './theme'",
-    "watch:dev:webpack": "npm run webpack:dev -- --watch",
-    "watch:prod": "concurrently \"npm:watch:prod:*\"",
-    "watch:prod:theme": "theme watch --dir './theme'",
-    "watch:prod:webpack": "npm run webpack -- --watch",
-    "checkout": "concurrently -k \"npm:checkout:*\"",
-    "checkout:js": "uglifyjs checkout/custom-checkout.js -o checkout/custom-checkout.min.js -c -m;",
-    "checkout:css": "cleancss checkout/custom-checkout.css -o checkout/custom-checkout.min.css",
-    "packages:upgrade": "yarn upgrade-interactive"
+    "watch:vite": "vite build --watch --mode dev"
   },
   "repository": {
     "type": "git",
@@ -60,11 +43,11 @@
     "@babel/preset-typescript": "^7.23.3",
     "@babel/runtime": "^7.23.9",
     "@babel/runtime-corejs3": "^7.23.9",
-    "@ribajs/eslint-config": "^2.0.0-rc.10",
-    "@ribajs/tsconfig": "^2.0.0-rc.10",
-    "@ribajs/webpack-config": "^2.0.0-rc.10",
+    "@ribajs/eslint-config": "^2.0.0-rc.11",
+    "@ribajs/tsconfig": "^2.0.0-rc.11",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
+    "@vitejs/plugin-legacy": "^5.3.0",
     "@yarnpkg/pnpify": "^4.0.1",
     "autoprefixer": "^10.4.17",
     "babel-loader": "^9.1.3",
@@ -82,7 +65,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "extract-loader": "^5.1.0",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
     "gulp": "^4.0.2",
     "gulp-jsoncombine": "^1.0.4",
@@ -98,33 +80,33 @@
     "postcss-loader": "^8.0.0",
     "postcss-modules": "^6.0.0",
     "prettier": "^3.2.4",
+    "rollup-plugin-string": "^3.0.0",
     "sass-loader": "^14.0.0",
     "shelljs": "^0.8.5",
     "style-loader": "^3.3.4",
-    "terser-webpack-plugin": "^5.3.10",
+    "terser": "^5.27.0",
     "tsify": "^5.0.4",
     "typescript": "^5.3.3",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
+    "vite": "^5.0.12",
     "watchify": "^4.0.0",
-    "webpack": "^5.90.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-stream": "^7.0.0",
     "yargs": "^17.7.2"
   },
   "dependencies": {
-    "@ribajs/bs4": "^2.0.0-rc.10",
-    "@ribajs/core": "^2.0.0-rc.10",
-    "@ribajs/events": "^2.0.0-rc.10",
-    "@ribajs/extras": "^2.0.0-rc.10",
-    "@ribajs/history": "^2.0.0-rc.10",
-    "@ribajs/i18n": "^2.0.0-rc.10",
-    "@ribajs/jquery": "^2.0.0-rc.10",
-    "@ribajs/router": "^2.0.0-rc.10",
-    "@ribajs/shopify": "^2.0.0-rc.10",
-    "@ribajs/shopify-tda": "^2.0.0-rc.10",
-    "@ribajs/types": "^2.0.0-rc.10",
-    "@ribajs/utils": "^2.0.0-rc.10",
+    "@ribajs/bs4": "^2.0.0-rc.11",
+    "@ribajs/bs5": "^2.0.0-rc.11",
+    "@ribajs/core": "^2.0.0-rc.11",
+    "@ribajs/events": "^2.0.0-rc.11",
+    "@ribajs/extras": "^2.0.0-rc.11",
+    "@ribajs/history": "^2.0.0-rc.11",
+    "@ribajs/i18n": "^2.0.0-rc.11",
+    "@ribajs/jquery": "^2.0.0-rc.11",
+    "@ribajs/router": "^2.0.0-rc.11",
+    "@ribajs/shopify": "^2.0.0-rc.11",
+    "@ribajs/shopify-tda": "^2.0.0-rc.11",
+    "@ribajs/types": "^2.0.0-rc.11",
+    "@ribajs/utils": "^2.0.0-rc.11",
     "@types/debug": "^4.1.12",
     "@types/jquery": "^3.5.29",
     "@types/p-queue": "^3.2.1",
@@ -132,6 +114,7 @@
     "debug": "^4.3.4",
     "p-queue": "^8.0.1",
     "popper.js": "^1.16.1",
+    "rimraf": "^5.0.5",
     "sass": "^1.70.0"
   },
   "packageManager": "yarn@4.0.2"
