--- a/package.json
+++ b/package.json
@@ -35,68 +35,23 @@
   },
   "homepage": "https://art-code-studio.myshopify.com",
   "devDependencies": {
-    "@babel/cli": "^7.23.9",
-    "@babel/core": "^7.23.9",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-export-default-from": "^7.23.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@babel/plugin-syntax-export-default-from": "^7.23.3",
-    "@babel/plugin-transform-runtime": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-typescript": "^7.23.3",
-    "@babel/runtime": "^7.23.9",
-    "@babel/runtime-corejs3": "^7.23.9",
     "@ribajs/eslint-config": "^2.0.0-rc.11",
     "@ribajs/tsconfig": "^2.0.0-rc.11",
+    "@shopify/cli": "^3.54.0",
     "@shopify/theme": "^3.54.0",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "@vitejs/plugin-legacy": "^5.3.0",
     "@yarnpkg/pnpify": "^4.0.1",
-    "autoprefixer": "^10.4.17",
-    "babel-loader": "^9.1.3",
-    "babel-plugin-array-includes": "^2.0.3",
-    "babel-plugin-transform-es2015-parameters": "^6.24.1",
-    "babelify": "^10.0.0",
-    "browserify": "^17.0.0",
-    "clean-css-cli": "^5.6.3",
     "concurrently": "^8.2.2",
     "core-js": "^3.35.1",
-    "css-flip": "^0.5.0",
-    "css-loader": "^6.9.1",
-    "csso-cli": "^4.0.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "extract-loader": "^5.1.0",
-    "file-loader": "^6.2.0",
-    "gulp": "^4.0.2",
-    "gulp-jsoncombine": "^1.0.4",
-    "gulp-util": "^3.0.8",
-    "gulp-zip": "^6.0.0",
-    "html-loader": "^5.0.0",
-    "inspectpack": "^4.7.1",
-    "jshint": "^2.13.6",
-    "mini-css-extract-plugin": "^2.7.7",
-    "nodemon": "^3.0.3",
-    "postcss": "^8.4.33",
-    "postcss-cli": "^11.0.0",
-    "postcss-loader": "^8.0.0",
-    "postcss-modules": "^6.0.0",
     "prettier": "^3.2.4",
-    "rollup-plugin-string": "^3.0.0",
-    "sass-loader": "^14.0.0",
-    "shelljs": "^0.8.5",
-    "style-loader": "^3.3.4",
     "terser": "^5.27.0",
-    "tsify": "^5.0.4",
     "typescript": "^5.3.3",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0",
-    "vite": "^5.0.12",
-    "watchify": "^4.0.0",
-    "yargs": "^17.7.2"
+    "vite": "^5.0.12"
   },
   "dependencies": {
     "@ribajs/bs4": "^2.0.0-rc.11",
